--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,13 +1,14 @@
 // $primary-color: #3c40c6;
 // $primary-color: #eb7980;
 // $primary: $primary-color !default;
-$primary-color: #5cdb95;
+$primary-color: #2f2fa2;
 // $secondary-color: #586261;
 // $secondary-color: #379683;
-$secondary-color: #05386b;
+$secondary-color: #f64c72;
 $warning: #ff2400;
 $overlay: #5cdb95;
-$text-color: #1e272e;
+// $text-color: #1e272e;
+$text-color: #553d67;
 $text-rev: #f2f2f2;
 $white: #fff;
 $card-back: #bbcedf;
