--- a/scss/style.css
+++ b/scss/style.css
@@ -7,44 +7,44 @@
   font-size: 2rem;
   line-height: 3.1rem;
   font-weight: 900;
-  color: #05386b;
+  color: #f64c72;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 2px;
 }
 
 .button {
-  background: #5cdb95;
-  color: #05386b;
+  background: #2f2fa2;
+  color: #f64c72;
   padding: 1rem 1.5rem;
   font-weight: 700;
-  border: 1.5px solid #5cdb95;
+  border: 1.5px solid #2f2fa2;
   border-radius: 0px;
   letter-spacing: 2px;
   text-transform: capitalize;
 }
 
 .button:hover {
-  background: #05386b;
+  background: #f64c72;
   color: #f2f2f2;
-  border-color: #05386b;
-  -webkit-box-shadow: rgba(30, 39, 46, 0.5) 0px 10px 10px -10px;
-          box-shadow: rgba(30, 39, 46, 0.5) 0px 10px 10px -10px;
+  border-color: #f64c72;
+  -webkit-box-shadow: rgba(85, 61, 103, 0.5) 0px 10px 10px -10px;
+          box-shadow: rgba(85, 61, 103, 0.5) 0px 10px 10px -10px;
   -webkit-transition: 0.3s ease-in;
   transition: 0.3s ease-in;
   z-index: 3;
 }
 
 .button-second {
-  background: #05386b;
+  background: #f64c72;
   color: #fff;
-  border-color: #05386b;
+  border-color: #f64c72;
 }
 
 .button-second:hover {
-  background: #5cdb95;
-  color: #05386b;
-  border-color: #5cdb95;
+  background: #2f2fa2;
+  color: #f64c72;
+  border-color: #2f2fa2;
 }
 
 .wb-button {
@@ -52,26 +52,26 @@
   background: transparent;
   font-size: 1.18rem;
   line-height: 2rem;
-  color: #5cdb95;
+  color: #2f2fa2;
   text-transform: capitalize;
   letter-spacing: 2px;
   font-weight: 500;
 }
 
 .wb-button i {
-  color: #05386b;
+  color: #f64c72;
   margin-left: 0.5rem;
 }
 
 .wb-button:hover {
   text-decoration: none;
-  color: #05386b;
+  color: #f64c72;
   -webkit-transition: 0.3s ease-in;
   transition: 0.3s ease-in;
 }
 
 .wb-button:hover i {
-  color: #5cdb95;
+  color: #2f2fa2;
   -webkit-transform: translateX(25px);
           transform: translateX(25px);
   -webkit-transition: 0.2s ease-in;
@@ -89,7 +89,7 @@
 
 .form-group input,
 .form-group textarea {
-  border-color: #5cdb95;
+  border-color: #2f2fa2;
 }
 
 .equal {
@@ -126,11 +126,11 @@
 }
 
 a {
-  color: #5cdb95;
+  color: #2f2fa2;
 }
 
 a:hover {
-  color: #1e272e;
+  color: #553d67;
 }
 
 .navbar {
@@ -154,7 +154,7 @@ a:hover {
 }
 
 .navbar .navbar-nav .nav-item .nav-link {
-  color: #05386b;
+  color: #f64c72;
   padding: 0.5rem 1rem;
   font-weight: 600;
   letter-spacing: 1px;
@@ -164,26 +164,26 @@ a:hover {
 }
 
 .navbar .navbar-nav .nav-item .nav-link:hover {
-  background: #71e0a3;
+  background: #3535b6;
 }
 
 .navbar .navbar-nav .nav-item .button {
   padding: 0.5rem 1rem;
   color: #fff;
-  background: #05386b;
-  border-color: #05386b;
+  background: #f64c72;
+  border-color: #f64c72;
   letter-spacing: 2px;
 }
 
 .navbar .navbar-nav .nav-item .button:hover {
   background: transparent;
-  color: #05386b;
-  border-color: #05386b;
+  color: #f64c72;
+  border-color: #f64c72;
 }
 
 .navbar.scrolled {
   height: 65px;
-  background: rgba(92, 219, 149, 0.9);
+  background: rgba(47, 47, 162, 0.9);
 }
 
 .navbar.scrolled .navbar-nav .nav-item .nav-link:hover {
@@ -192,11 +192,11 @@ a:hover {
 
 .navbar.scrolled .navbar-nav .nav-item .button:hover {
   background: transparent;
-  border-color: #05386b;
+  border-color: #f64c72;
 }
 
 .modal-body {
-  background: #5cdb95;
+  background: #2f2fa2;
 }
 
 .quote-engine-wrapper h5 {
@@ -225,8 +225,8 @@ a:hover {
 
 .quote-engine-wrapper .button {
   background: transparent;
-  border-color: #05386b;
-  color: #05386b;
+  border-color: #f64c72;
+  color: #f64c72;
 }
 
 .quote-engine-wrapper .button:hover {
@@ -236,29 +236,28 @@ a:hover {
 
 .modal-footer {
   padding: 0.3rem;
-  background: #05386b;
+  background: #f64c72;
 }
 
 .modal-footer .button:hover {
   background: #f2f2f2;
-  color: #05386b;
+  color: #f64c72;
 }
 
 .hero {
   height: 100vh;
-  background: url("../img/main-hero.jpg") no-repeat bottom center;
+  background: linear-gradient(109.6deg, #2f2fa2 11.2%, #553d67 81.1%), url("../dist/img/main-hero.jpg") no-repeat bottom center;
   background-size: cover;
   background-attachment: fixed;
   background-blend-mode: multiply;
   padding: 30vh 0 20vh 0;
   position: relative;
   text-align: center;
-  color: #1e272e;
+  color: #553d67;
 }
 
 .hero .hero-text {
   padding: 5vh 0;
-  background: rgba(30, 39, 46, 0.65);
 }
 
 .hero .hero-text .heading h1 {
@@ -295,7 +294,7 @@ a:hover {
 }
 
 .hero-shapes .hs-content {
-  background: rgba(92, 219, 149, 0.7);
+  background: rgba(47, 47, 162, 0.7);
   padding: 5% 10% 5% 5%;
   -webkit-clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
           clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
@@ -341,8 +340,8 @@ a:hover {
 .card-holder {
   background: rgba(255, 255, 255, 0.7);
   margin: 1.5rem 0;
-  -webkit-box-shadow: rgba(30, 39, 46, 0.2) 0px 5px 5px -5px;
-          box-shadow: rgba(30, 39, 46, 0.2) 0px 5px 5px -5px;
+  -webkit-box-shadow: rgba(85, 61, 103, 0.2) 0px 5px 5px -5px;
+          box-shadow: rgba(85, 61, 103, 0.2) 0px 5px 5px -5px;
 }
 
 .card-holder .ch-image-holder .img-fluid {
@@ -361,25 +360,25 @@ a:hover {
 .card-holder .ch-content-holder .sub-heading h5 {
   font-size: 1.3rem;
   font-weight: 600;
-  color: #05386b;
+  color: #f64c72;
   text-transform: capitalize;
 }
 
 .card-holder .ch-content-holder .sub-heading .price h5 {
   font-size: 1.18rem;
   font-weight: 500;
-  color: #1e272e;
+  color: #553d67;
   font-family: "Josefin Sans", sans-serif;
 }
 
 .card-holder .ch-content-holder .star {
-  color: #5cdb95;
+  color: #2f2fa2;
 }
 
 .card-holder:hover {
   background: white;
-  -webkit-box-shadow: rgba(30, 39, 46, 0.5) 0px 10px 10px -10px;
-          box-shadow: rgba(30, 39, 46, 0.5) 0px 10px 10px -10px;
+  -webkit-box-shadow: rgba(85, 61, 103, 0.5) 0px 10px 10px -10px;
+          box-shadow: rgba(85, 61, 103, 0.5) 0px 10px 10px -10px;
   -webkit-transform: translateY(-0.35rem);
           transform: translateY(-0.35rem);
   -webkit-transition: 0.3s ease-in;
@@ -387,7 +386,7 @@ a:hover {
 }
 
 .what-is {
-  background: #05386b;
+  background: #f64c72;
   padding: 5vh 0;
 }
 
@@ -396,11 +395,11 @@ a:hover {
 }
 
 .what-is .heading h1 {
-  color: #1e272e;
+  color: #553d67;
 }
 
 .what-is .sub-heading {
-  color: rgba(30, 39, 46, 0.7);
+  color: rgba(85, 61, 103, 0.7);
 }
 
 .what-is .sub-heading h4 {
@@ -418,7 +417,7 @@ a:hover {
 .feature-wrapper .feature-icon img {
   background: #f2f2f2;
   padding: 1.2rem;
-  border: 5px solid #5cdb95;
+  border: 5px solid #2f2fa2;
   border-radius: 50%;
 }
 
@@ -429,7 +428,7 @@ a:hover {
 
 .feature-wrapper .feature-content {
   margin: 1vh 0;
-  color: rgba(30, 39, 46, 0.7);
+  color: rgba(85, 61, 103, 0.7);
   font-size: 1.25rem;
   font-weight: 600;
 }
@@ -447,7 +446,7 @@ a:hover {
 }
 
 .how-works .sub-heading {
-  color: rgba(30, 39, 46, 0.7);
+  color: rgba(85, 61, 103, 0.7);
 }
 
 .how-works .sub-heading h4 {
@@ -466,12 +465,12 @@ a:hover {
 .how-works .hw-single .hws-content {
   font-size: 1.4rem;
   font-weight: 600;
-  color: rgba(30, 39, 46, 0.7);
+  color: rgba(85, 61, 103, 0.7);
 }
 
 .why-us {
   padding: 8vh 0;
-  color: #1e272e;
+  color: #553d67;
 }
 
 .why-us .wu-content-wrapper .wu-content {
@@ -487,12 +486,12 @@ a:hover {
 
 .wu-content-image {
   padding: 1rem;
-  background: #5cdb95;
+  background: #2f2fa2;
 }
 
 .sub-heading,
 .ec-heading {
-  color: #1e272e;
+  color: #553d67;
   padding-bottom: 2rem;
 }
 
@@ -516,7 +515,7 @@ a:hover {
 }
 
 .ec-iconbox .ec-icon-heading {
-  color: #1e272e;
+  color: #553d67;
 }
 
 .ec-iconbox .ec-icon-heading h5 {
@@ -545,8 +544,8 @@ a:hover {
   margin: 1.5rem 0;
   padding: 2.5rem 1rem;
   background: rgba(255, 255, 255, 0.7);
-  -webkit-box-shadow: rgba(30, 39, 46, 0.2) 0px 5px 5px -5px;
-          box-shadow: rgba(30, 39, 46, 0.2) 0px 5px 5px -5px;
+  -webkit-box-shadow: rgba(85, 61, 103, 0.2) 0px 5px 5px -5px;
+          box-shadow: rgba(85, 61, 103, 0.2) 0px 5px 5px -5px;
 }
 
 .wwd-content-block .icon-holder {
@@ -569,8 +568,8 @@ a:hover {
 
 .wwd-content-block:hover {
   background: white;
-  -webkit-box-shadow: rgba(30, 39, 46, 0.5) 0px 10px 10px -10px;
-          box-shadow: rgba(30, 39, 46, 0.5) 0px 10px 10px -10px;
+  -webkit-box-shadow: rgba(85, 61, 103, 0.5) 0px 10px 10px -10px;
+          box-shadow: rgba(85, 61, 103, 0.5) 0px 10px 10px -10px;
   -webkit-transform: translateY(-0.25rem);
           transform: translateY(-0.25rem);
   -webkit-transition: 0.4s ease-in;
@@ -609,7 +608,7 @@ a:hover {
   font-weight: bold;
   padding: 15px 20px;
   border-radius: 50%;
-  background-color: #5cdb95;
+  background-color: #2f2fa2;
   color: #f2f2f2;
   max-height: 50px;
   z-index: 2;
@@ -622,7 +621,7 @@ a:hover {
 }
 
 .how-it-works.row .col-7 h5 {
-  color: #1e272e;
+  color: #553d67;
   font-weight: 900;
   letter-spacing: 1px;
   font-size: 1.5rem;
@@ -630,14 +629,14 @@ a:hover {
 }
 
 .how-it-works.row .col-7 p {
-  color: #1e272e;
+  color: #553d67;
   font-size: 1rem;
   line-height: 1.9rem;
   font-weight: 500;
 }
 
 .how-it-works.row .col-7 ul li {
-  color: #1e272e;
+  color: #553d67;
   font-size: 1rem;
   line-height: 1.9rem;
   font-weight: 500;
@@ -660,7 +659,7 @@ a:hover {
 .how-it-works.row .col-2::after {
   content: "";
   position: absolute;
-  border-left: 3px solid #5cdb95;
+  border-left: 3px solid #2f2fa2;
   z-index: 1;
 }
 
@@ -692,7 +691,7 @@ a:hover {
 }
 
 .timeline hr {
-  border-top: 3px solid #5cdb95;
+  border-top: 3px solid #2f2fa2;
   margin: 0;
   top: 17px;
   position: relative;
@@ -706,7 +705,7 @@ a:hover {
 }
 
 .timeline .corner {
-  border: 3px solid #5cdb95;
+  border: 3px solid #2f2fa2;
   width: 100%;
   position: relative;
   border-radius: 15px;
@@ -741,25 +740,25 @@ a:hover {
 }
 
 .review-content-wrapper .review-icon {
-  color: #5cdb95;
+  color: #2f2fa2;
   margin-bottom: 1.5rem;
 }
 
 .review-content-wrapper .review-rating {
-  color: #05386b;
+  color: #f64c72;
   margin-bottom: 0.5rem;
 }
 
 .review-content-wrapper .reviewer-info .name {
   font-size: 0.9rem;
   line-height: 1rem;
-  color: #32414d;
+  color: #6f5087;
 }
 
 .review-content-wrapper .reviewer-info .company {
   font-size: 0.8rem;
   line-height: 0.9rem;
-  color: #465b6c;
+  color: #8966a4;
 }
 
 .review-content-wrapper .review-text p {
@@ -768,7 +767,7 @@ a:hover {
 
 .review-content-wrapper .review-text .quote {
   margin-right: 1rem;
-  color: #5cdb95;
+  color: #2f2fa2;
 }
 
 .contact {
@@ -786,7 +785,7 @@ a:hover {
   line-height: 2.2rem;
   font-weight: 600;
   margin: 5px 0 30px 0;
-  color: #1e272e;
+  color: #553d67;
   text-transform: capitalize;
 }
 
@@ -802,7 +801,7 @@ a:hover {
 
 .contact .contact-box p span {
   font-size: 1.1rem;
-  color: #1e272e;
+  color: #553d67;
   font-weight: 500;
   margin-left: 5px;
   font-family: "Josefin Sans", sans-serif;
@@ -810,7 +809,7 @@ a:hover {
 
 .contact .contact-box p span a {
   text-decoration: none;
-  color: #1e272e;
+  color: #553d67;
   font-family: "Josefin Sans", sans-serif;
 }
 
@@ -820,7 +819,7 @@ a:hover {
 
 .contact .contact-form .form-group input,
 .contact .contact-form .form-group textarea {
-  border-color: #5cdb95;
+  border-color: #2f2fa2;
 }
 
 .area-cover {
@@ -848,7 +847,7 @@ a:hover {
 }
 
 .area-cover .tabs .tab a {
-  color: #1e272e;
+  color: #553d67;
   font-size: 1rem;
   margin-top: -10px;
   text-transform: capitalize;
@@ -856,11 +855,11 @@ a:hover {
 
 .area-cover .tabs .indicator {
   height: 3px;
-  background-color: #05386b;
+  background-color: #f64c72;
 }
 
 .sticky-mobile {
-  background: #5cdb95;
+  background: #2f2fa2;
   color: #f2f2f2;
   width: 100vw;
   max-height: 53px;
@@ -899,7 +898,7 @@ a:hover {
 }
 
 .footer {
-  background: #5cdb95;
+  background: #2f2fa2;
   color: #f2f2f2;
   font-size: 0.8rem;
   font-weight: 500;
@@ -932,7 +931,7 @@ a:hover {
   font-weight: 900;
   font-size: 2.3rem;
   font-family: "Josefin Sans", sans-serif;
-  background: rgba(5, 56, 107, 0.8);
+  background: rgba(246, 76, 114, 0.8);
   display: inline-block;
   padding: 2rem;
 }
@@ -954,7 +953,7 @@ a:hover {
 }
 
 .about {
-  background: #5cdb95;
+  background: #2f2fa2;
   color: #f2f2f2;
   overflow: hidden;
   padding: 30px 0 50px 0;
@@ -1005,8 +1004,8 @@ a:hover {
   margin: 3% 0;
   padding: 4%;
   border-radius: 0;
-  -webkit-box-shadow: 0px 5px 5px -5px rgba(30, 39, 46, 0.4);
-          box-shadow: 0px 5px 5px -5px rgba(30, 39, 46, 0.4);
+  -webkit-box-shadow: 0px 5px 5px -5px rgba(85, 61, 103, 0.4);
+          box-shadow: 0px 5px 5px -5px rgba(85, 61, 103, 0.4);
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1029,7 +1028,7 @@ a:hover {
 }
 
 .pricing .service-template .st-header h4 {
-  color: #1e272e;
+  color: #553d67;
   font-size: 1.4rem;
   font-weight: 900;
   text-transform: uppercase;
@@ -1044,7 +1043,7 @@ a:hover {
 .pricing .service-template .st-price p .amount {
   font-weight: 900;
   font-size: 4.3rem;
-  color: #5cdb95;
+  color: #2f2fa2;
 }
 
 .pricing .service-template .st-body {
@@ -1055,7 +1054,7 @@ a:hover {
   margin-top: 15px;
   font-size: 0.92rem;
   font-weight: 700;
-  color: #1e272e;
+  color: #553d67;
 }
 
 .pricing .service-template .st-body .st-content ul {
@@ -1068,16 +1067,16 @@ a:hover {
 }
 
 .pricing .service-template .st-footer {
-  background: #5cdb95;
+  background: #2f2fa2;
   border-radius: 0;
 }
 
 .pricing .service-template .st-footer a {
-  color: #05386b;
+  color: #f64c72;
 }
 
 .pricing .service-template .st-footer:hover {
-  background: #05386b;
+  background: #f64c72;
   -webkit-transition: 0.3s ease-in;
   transition: 0.3s ease-in;
 }
@@ -1092,8 +1091,8 @@ a:hover {
   background: white;
   -webkit-transform: scale(1.01, 1.01);
           transform: scale(1.01, 1.01);
-  -webkit-box-shadow: 0px 10px 10px -10px rgba(30, 39, 46, 0.4);
-          box-shadow: 0px 10px 10px -10px rgba(30, 39, 46, 0.4);
+  -webkit-box-shadow: 0px 10px 10px -10px rgba(85, 61, 103, 0.4);
+          box-shadow: 0px 10px 10px -10px rgba(85, 61, 103, 0.4);
   -webkit-transition: 0.4s ease-in;
   transition: 0.4s ease-in;
 }
@@ -1142,7 +1141,7 @@ a:hover {
     font-size: 1rem;
   }
   .navbar.scrolled {
-    background: #5cdb95;
+    background: #2f2fa2;
   }
   .navbar-nav {
     background: rgba(242, 242, 242, 0.95);
@@ -1226,7 +1225,7 @@ a:hover {
     font-weight: 600;
   }
   .services::after {
-    border-bottom: 100px solid #05386b;
+    border-bottom: 100px solid #f64c72;
     -webkit-clip-path: polygon(0% 100%, 0% 96%, 100% 100%);
             clip-path: polygon(0% 100%, 0% 96%, 100% 100%);
   }
@@ -1283,7 +1282,7 @@ a:hover {
     padding: 0 4%;
   }
   .services::after {
-    border-bottom: 80px solid #05386b;
+    border-bottom: 80px solid #f64c72;
     -webkit-clip-path: polygon(0% 100%, 0% 98%, 100% 100%);
             clip-path: polygon(0% 100%, 0% 98%, 100% 100%);
   }
@@ -1323,13 +1322,13 @@ body {
 }
 
 ::-moz-selection {
-  color: #05386b;
-  background: #5cdb95;
+  color: #f64c72;
+  background: #2f2fa2;
 }
 
 ::selection {
-  color: #05386b;
-  background: #5cdb95;
+  color: #f64c72;
+  background: #2f2fa2;
 }
 
 .light {
@@ -1352,6 +1351,6 @@ body {
 }
 
 .whatsapp-icon a i {
-  color: #26ab62;
+  color: #181853;
 }
 /*# sourceMappingURL=style.css.map */
