--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -11,7 +11,7 @@
   background-size: cover;
   background-attachment: fixed;
   background-blend-mode: multiply;
-  padding: 30vh 0 20vh 0;
+  padding: 20vh 0;
   // background-color: $primary-color;
   position: relative;
   text-align: center;
@@ -25,31 +25,31 @@
     // clip-path: polygon(30% 0%, 100% 0%, 100% 100%, 30% 100%, 10% 50%);
     // clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 35% 95%);
 
-    .heading {
+    .display {
       h1 {
         color: $white;
-        font-size: 2rem;
-        line-height: 3.1rem;
+        font-size: 3.5rem;
+        line-height: 5.5rem;
         font-weight: 700;
-        text-transform: capitalize;
-        letter-spacing: 2px;
-        // font-family: "Montserrat", sans-serif;
-        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        // font-family: "Roboto", sans-serif;
+        font-family: "Josefin Sans", sans-serif;
       }
     }
     .sub-heading {
-      margin-left: 15%;
+      // margin-left: 15%;
       color: $text-rev;
       padding: 1vh 0;
       h5 {
-        font-size: 1.1rem;
-        line-height: 1.8rem;
+        font-size: 1.3rem;
+        line-height: 2.8rem;
         font-weight: 500;
         letter-spacing: 1px;
         // font-family: "Josefin Sans", sans-serif;
         // font-family: "Montserrat", sans-serif;
-        // font-family: "Montserrat", sans-serif;
-        font-family: "Roboto", sans-serif;
+        font-family: "Montserrat", sans-serif;
+        // font-family: "Roboto", sans-serif;
       }
     }
     .hero-button {
