--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,8 +7,8 @@ $primary-color: #2f2fa2;
 $secondary-color: #f64c72;
 $warning: #ff2400;
 $overlay: #5cdb95;
-// $text-color: #1e272e;
-$text-color: #553d67;
+$text-color: #1e272e;
+$additional-color: #553d67;
 $text-rev: #f2f2f2;
 $white: #fff;
 $card-back: #bbcedf;
