--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,7 +71,7 @@ body {
   z-index: 100;
   a {
     i {
-      color: darken($primary-color, 20);
+      color: darken($secondary-color, 20);
     }
   }
 }
