--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -35,6 +35,7 @@
         letter-spacing: 3px;
         // font-family: "Roboto", sans-serif;
         font-family: "Josefin Sans", sans-serif;
+        // font-family: "Cinzel Decorative", cursive;
       }
     }
     .sub-heading {
