--- a/scss/style.css
+++ b/scss/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster|Montserrat|Raleway|Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Nosifer&family=Trade+Winds&display=swap");
 .heading {
   padding: 0 0 30px 0;
 }
