--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster|Montserrat|Raleway|Roboto&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Nosifer&family=Trade+Winds&display=swap");
+
 @import "./variables";
 @import "./global";
 @import "./navbar";
