--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,7 +4,7 @@
     font-size: 2rem;
     line-height: 3.1rem;
     font-weight: 900;
-    color: $secondary-color;
+    color: $primary-color;
     text-transform: uppercase;
     text-align: center;
     letter-spacing: 2px;
