--- a/scss/_sell-more.scss
+++ b/scss/_sell-more.scss
@@ -1,7 +1,8 @@
-// sell more & Software section in the sell-more.scss
+// sell more, Software, five-sphere section in the sell-more.scss
 
 .sell-more,
-.software {
+.software,
+.five-sphere {
   padding: 5vh 0;
   .sm-content {
     padding: 2vh 0;
@@ -42,6 +43,42 @@
       &:hover {
         background: transparentize($secondary-color, 0.9);
         border: 2px solid $secondary-color;
+      }
+    }
+  }
+}
+
+.five-sphere {
+  padding: 8vh 0;
+  .icon-template {
+    background: $primary-color;
+    color: $white;
+    margin: 1.4rem 0;
+    // border: 2px solid $secondary-color;
+    // display: flex;
+    // flex-direction: column;
+    // align-content: space-between;
+    padding: 1rem 1rem 0.2rem 0;
+    clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
+    .icon {
+      color: $secondary-color;
+    }
+    .text {
+      margin-top: 0.5rem;
+      h5 {
+        font-size: 1.4rem;
+        line-height: 2.6rem;
+        color: $text-rev;
+        letter-spacing: 2px;
+      }
+    }
+    &:hover {
+      background: $secondary-color;
+      transform: translateX(1rem);
+      transition: 0.5s ease-in;
+      .icon {
+        color: $primary-color;
+        transition: 0.5s ease-in;
       }
     }
   }
