--- a/scss/style.css
+++ b/scss/style.css
@@ -433,17 +433,20 @@ a:hover {
 }
 
 .sell-more,
-.software {
+.software,
+.five-sphere {
   padding: 5vh 0;
 }
 
 .sell-more .sm-content,
-.software .sm-content {
+.software .sm-content,
+.five-sphere .sm-content {
   padding: 2vh 0;
 }
 
 .sell-more .sm-content h3,
-.software .sm-content h3 {
+.software .sm-content h3,
+.five-sphere .sm-content h3 {
   color: #1e272e;
   font-size: 1.8rem;
   line-height: 2.8rem;
@@ -454,7 +457,8 @@ a:hover {
 }
 
 .sell-more .sm-content p,
-.software .sm-content p {
+.software .sm-content p,
+.five-sphere .sm-content p {
   color: #553d67;
   font-family: "Montserrat", sans-serif;
   font-size: 0.9rem;
@@ -481,6 +485,48 @@ a:hover {
 .software .sm-content .button-second:hover {
   background: rgba(246, 76, 114, 0.1);
   border: 2px solid #f64c72;
+}
+
+.five-sphere {
+  padding: 8vh 0;
+}
+
+.five-sphere .icon-template {
+  background: #2f2fa2;
+  color: #fff;
+  margin: 1.4rem 0;
+  padding: 1rem 1rem 0.2rem 0;
+  -webkit-clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
+          clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
+}
+
+.five-sphere .icon-template .icon {
+  color: #f64c72;
+}
+
+.five-sphere .icon-template .text {
+  margin-top: 0.5rem;
+}
+
+.five-sphere .icon-template .text h5 {
+  font-size: 1.4rem;
+  line-height: 2.6rem;
+  color: #f2f2f2;
+  letter-spacing: 2px;
+}
+
+.five-sphere .icon-template:hover {
+  background: #f64c72;
+  -webkit-transform: translateX(1rem);
+          transform: translateX(1rem);
+  -webkit-transition: 0.5s ease-in;
+  transition: 0.5s ease-in;
+}
+
+.five-sphere .icon-template:hover .icon {
+  color: #2f2fa2;
+  -webkit-transition: 0.5s ease-in;
+  transition: 0.5s ease-in;
 }
 
 .how-works {
@@ -591,6 +637,8 @@ a:hover {
 }
 
 .wwd-content-block {
+  width: 100%;
+  height: 100%;
   margin: 1.5rem 0;
   padding: 2.5rem 1rem;
   color: #553d67;
