--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -66,7 +66,7 @@
     }
   }
   .navbar-nav {
-    background: rgba($text-rev, 0.95);
+    background: $additional-color;
   }
   .about {
     .image-holder {
