--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -1,50 +1,49 @@
-.modal-body{
-	background: $primary-color;
+.modal-body {
+  background: $text-rev;
 }
 .quote-engine-wrapper {
-	
-	h5 {
-		font-size: 1.5rem;
-		font-weight: 600;
-		margin: 10px 0 25px 0;
-		text-align: center;
-	}
-	.content {
-		font-size: 0.9rem;
-		display: block;
-		margin: 0.3rem 2rem;
-	}
-	p{
-		input[type=radio] {
-			
-			width: 16px;
-			height: 16px;
-			margin-right: 10px;
-	}
-		span{
-			font-size: 1.1rem;
-			line-height: 1.9rem;
-			// color: $text-rev;
-		}
-	}
-	.button{
-		background: transparent;
-		border-color: $secondary-color;
-		color: $secondary-color;
-		&:hover{
-			background: $text-rev;
-			border-color: $text-rev;
-		}
-	}
+  h5 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 10px 0 25px 0;
+    text-align: center;
+  }
+  .content {
+    font-size: 0.9rem;
+    display: block;
+    margin: 0.3rem 2rem;
+  }
+  p {
+    input[type="radio"] {
+      width: 16px;
+      height: 16px;
+      margin-right: 10px;
+    }
+    span {
+      font-size: 1.1rem;
+      line-height: 1.9rem;
+      // color: $text-rev;
+    }
+  }
+  .button {
+    background: transparent;
+    border-color: $primary-color;
+    color: $primary-color;
+    &:hover {
+      background: $text-rev;
+      border-color: $secondary-color;
+      color: $secondary-color;
+    }
+  }
 }
 // .modal-content {
 // 	border-radius: 3rem 3rem 0.3rem 0.3rem;
 // }
 .modal-footer {
-	padding: 0.3rem;
-	background: $secondary-color;
-	.button:hover{
-		background: $text-rev;
-		color: $secondary-color;
-	}
+  padding: 0.3rem;
+  background: $secondary-color;
+  .button:hover {
+    background: $text-rev;
+    color: $secondary-color;
+  }
 }
