--- a/scss/style.css
+++ b/scss/style.css
@@ -196,7 +196,7 @@ a:hover {
 }
 
 .modal-body {
-  background: #2f2fa2;
+  background: #f2f2f2;
 }
 
 .quote-engine-wrapper h5 {
@@ -212,7 +212,7 @@ a:hover {
   margin: 0.3rem 2rem;
 }
 
-.quote-engine-wrapper p input[type=radio] {
+.quote-engine-wrapper p input[type="radio"] {
   width: 16px;
   height: 16px;
   margin-right: 10px;
@@ -225,13 +225,14 @@ a:hover {
 
 .quote-engine-wrapper .button {
   background: transparent;
-  border-color: #f64c72;
-  color: #f64c72;
+  border-color: #2f2fa2;
+  color: #2f2fa2;
 }
 
 .quote-engine-wrapper .button:hover {
   background: #f2f2f2;
-  border-color: #f2f2f2;
+  border-color: #f64c72;
+  color: #f64c72;
 }
 
 .modal-footer {
