--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -24,7 +24,11 @@
     // height: 100%;
     // clip-path: polygon(30% 0%, 100% 0%, 100% 100%, 30% 100%, 10% 50%);
     // clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 35% 95%);
-
+    .heading {
+      h1 {
+        color: $white;
+      }
+    }
     .display {
       h1 {
         color: $white;
@@ -94,16 +98,17 @@
 .hero-button {
   margin-top: 10px;
 }
-.thank-content {
-  padding-top: 5vh;
-  h1,
-  h3 {
-    color: $text-rev;
-  }
-  h1 {
-    font-weight: 900;
-  }
-  h3 {
-    font-weight: 500;
-  }
-}
+// .thank-content {
+//   padding-top: 5vh;
+//   h1,
+//   h3 {
+//     color: $text-rev;
+//   }
+//   h1 {
+//     font-weight: 900;
+//     color: $white;
+//   }
+//   h3 {
+//     font-weight: 500;
+//   }
+// }
